# QuantMind

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
apps/desktop/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/desktop/electron/: main.cjs  preload.cjs
apps/desktop/src/: App.tsx  api.ts  styles.css
docs/: desktop-app.md  desktop-e2e.md  desktop-rpc-contract.md  overview.md  spec.md
src/quantmind/: __init__.py  cli.py
src/quantmind/backtest/: __init__.py  __main__.py  engine.py  metrics.py  report.py
src/quantmind/data/: __init__.py
src/quantmind/data/edinet/: __init__.py  __main__.py  client.py  financials.py  officers.py
src/quantmind/desktop/: __init__.py  __main__.py  demo_data.py  read_model.py  rpc_server.py  schemas.py  service.py
src/quantmind/falsifiability/: __init__.py  generator.py  monitor.py  prompt.txt
src/quantmind/learning/: __init__.py  postmortem.py  prompt.txt
src/quantmind/llm/: __init__.py  debate.py  runner.py
src/quantmind/pipeline/: __init__.py  daily.py
src/quantmind/portfolio/: __init__.py  __main__.py  state.py
src/quantmind/regime/: __init__.py  config.yaml  detector.py
src/quantmind/report/: __init__.py  generator.py
src/quantmind/screening/: __init__.py  __main__.py  rule_screener.py
src/quantmind/storage/: __init__.py  __main__.py  connection.py  parquet.py
src/quantmind/universe/: __init__.py  __main__.py  builder.py  discovery.py
tests/: test_backtest.py  test_cli.py  test_debate.py  test_desktop_e2e.py  test_desktop_read_model.py  test_desktop_rpc.py  test_desktop_service.py  test_discovery.py  test_edinet.py  test_falsifiability_generator.py  test_falsifiability_monitor.py  test_ir_docs.py  test_llm_runner.py  test_pipeline.py  test_portfolio.py  test_postmortem.py  test_price_adapter.py  test_regime.py  test_report.py  test_screening.py  test_smoke.py  test_storage.py  test_tdnet.py  test_universe.py
(+22 files in other folders)
