[project]
name = "quantmind"
version = "0.1.0"
description = "日本株（小型株スイング）向けAI売買支援システム"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ysj" }]
dependencies = [
    "duckdb>=1.0",
    "pandas>=2.2",
    "pyarrow>=15",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "tenacity>=8.2",
    "click>=8.1",
    "python-dateutil>=2.9",
]

[project.scripts]
quantmind = "quantmind.cli:main"

[project.optional-dependencies]
prices = ["yfinance>=0.2.40"]
edinet = ["requests>=2.31", "lxml>=5.0", "beautifulsoup4>=4.12"]
ir = ["pypdf>=4.0", "pdfplumber>=0.10", "requests>=2.31"]
report = ["jinja2>=3.1", "weasyprint>=62.0", "plotly>=5.20"]
all = [
    "yfinance>=0.2.40",
    "requests>=2.31",
    "lxml>=5.0",
    "beautifulsoup4>=4.12",
    "pypdf>=4.0",
    "pdfplumber>=0.10",
    "jinja2>=3.1",
    "plotly>=5.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-pyyaml>=6.0",
    "types-python-dateutil>=2.9",
    "types-requests>=2.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantmind"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
# RUF001/002/003: 日本語のドキュストリングで全角記号を許容
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/quantmind"]
branch = true
